@@ -26,10 +26,16 @@ class Ethna_Test_ActionForm extends Ethna_ActionForm
             'type' => VAR_TYPE_STRING,
             'form_type' => FORM_TYPE_TEXT,
         ),
+
+        'test_array' => array(
+            'type' => array(VAR_TYPE_STRING),
+            'form_type' => FORM_TYPE_TEXT,
+            'name' => 'test array',
+        ),
+
     );
 }
 // }}}
-
 
 // {{{    Ethna_ActionForm_Test
 /**
@@ -55,6 +61,7 @@ class Ethna_ActionForm_Test extends Ethna_UnitTestBase
     {
         $_SERVER['REQUEST_METHOD'] = NULL;
         $this->local_af = NULL;
+        $_POST = array();
     }
 
     // {{{ get
@@ -70,7 +77,7 @@ class Ethna_ActionForm_Test extends Ethna_UnitTestBase
     {
         //   null param.
         $def = $this->local_af->getDef();
-        $this->assertEqual(2, count($def));
+        $this->assertEqual(3, count($def));
         $this->assertEqual(10, count($def['test']));
         $this->assertEqual('test', $def['test']['name']);
 
@@ -112,6 +119,67 @@ class Ethna_ActionForm_Test extends Ethna_UnitTestBase
     {
         $this->local_af->set('test', 'test');
         $this->assertEqual('test', $this->local_af->get('test'));
+    }
+    // }}}
+
+    // {{{ getHiddenVars 
+    function test_getHiddenVars()
+    {
+        //    フォーム定義が配列で、submit された値が非配列の場合
+        //    かつ、フォーム定義が配列なので、結局出力するhiddden
+        //    タグも配列用のものとなる. 警告も勿論でない
+        $this->local_af->set('test_array', 1);
+
+        $hidden = $this->local_af->getHiddenVars();
+        $expected = "<input type=\"hidden\" name=\"test_array[0]\" value=\"1\" />\n";
+        $this->assertEqual($hidden, $expected);
+        $this->local_af->clearFormVars();
+
+        //    配列出力のテスト
+        $this->local_af->set('test_array', array(1, 2));
+        $hidden = $this->local_af->getHiddenVars();
+        $expected = "<input type=\"hidden\" name=\"test_array[0]\" value=\"1\" />\n"
+                  . "<input type=\"hidden\" name=\"test_array[1]\" value=\"2\" />\n";
+        $this->assertEqual($hidden, $expected);
+        $this->local_af->clearFormVars();
+
+        //    スカラーのテスト
+        $this->local_af->set('test', 1);
+        $hidden = $this->local_af->getHiddenVars();
+        $expected = "<input type=\"hidden\" name=\"test\" value=\"1\" />\n";
+        $this->assertEqual($hidden, $expected);
+        $this->local_af->clearFormVars();
+
+        //    フォーム定義がスカラーで、submitされた値が配列の場合
+        //    この場合は明らかに使い方が間違っている上、２重に値が
+        //    出力されても意味がないので、警告(E_NOTICE)扱いにする
+        //    この場合、hiddenタグは出力されない
+        $this->local_af->set('test', array(1,2));
+        $hidden = $this->local_af->getHiddenVars();
+        $this->assertEqual($hidden, '');  //  値が入っていない扱いなので空文字が返る
+        $this->local_af->clearFormVars();
+
+        //    include_list テスト
+        $this->local_af->set('test', 1);
+        $this->local_af->set('no_name', 'name');
+        $this->local_af->set('test_array', array(1,2));
+        $include_list = array('test');
+        $hidden = $this->local_af->getHiddenVars($include_list);
+        $expected = "<input type=\"hidden\" name=\"test\" value=\"1\" />\n";
+        $this->assertEqual($hidden, $expected);
+       
+        //    exclude_list テスト
+        $exclude_list = array('test_array', 'no_name');
+        $hidden = $this->local_af->getHiddenVars(NULL, $exclude_list);
+        $expected = "<input type=\"hidden\" name=\"test\" value=\"1\" />\n";
+        $this->assertEqual($hidden, $expected);
+
+        //    include_list, exclude_list の組み合わせ
+        $include_list = array('test', 'no_name');
+        $exclude_list = array('no_name');
+        $hidden = $this->local_af->getHiddenVars($include_list, $exclude_list);
+        $expected = "<input type=\"hidden\" name=\"test\" value=\"1\" />\n";
+        $this->assertEqual($hidden, $expected);
     }
     // }}}
 
