@@ -36,6 +36,8 @@
 - smarty_modifier_unique プラグインが、仕様通り動作していなかったバグを修正
 - Ethna_PearWrapper のエラー処理が誤っていたのを修正 (thanks: id:nazo)
 -- http://wassr.jp/user/nazo/statuses/SkfJTckkN2
+- Ethna_ActionForm#getHiddenVars メソッドで、フォーム定義が配列で設定された値がスカラーの場合に警告が出ていたのを修正(thanks: maru_cc)
+-- 逆に、フォーム定義がスカラーで値が配列の場合は救いようがないので警告扱い
 
 ** 2.5.0-preview2
 
